# Cheetah-Software

./: .gitmodules  CMakeLists.txt  PeriodicTask.cpp  PeriodicTask.h  Timer.h  main.cpp  motor_control_demo.xml  package.xml  readme2.md  rt_spi.cpp  rt_spi.h
bridge/: bridge_interface.h  hardware_bridge.cpp  hardware_bridge.h  motor_socket_bridge.cpp  motor_socket_bridge.h  motor_spi_bridge.cpp  motor_spi_bridge.h
cmake/: FindCASADI.cmake  FindIPOPT.cmake  Qt5CoreConfig.cmake
common/include/Dynamics/: MiniCheetah.h
common/src/Controllers/: LegController.cpp
config/: default-terrain.yaml  initial_jpos_ctrl.yaml  mc-mit-ctrl-user-parameters.yaml  mini-cheetah-defaults.yaml
hardware/: bcm2835.cpp  imu_vn.cpp  motor_socketcan.cpp  motor_socketcan.h  motor_spi.cpp  motor_spi.h
hardware/bridge/: bridge_interface.h  motor_socket_bridge.cpp  motor_socket_bridge.h  motor_spi_bridge.cpp  motor_spi_bridge.h
imu_test/: CMakeLists.txt  IMUTypes.h  main.cpp  rt_vectornav.cpp
include/motor_control_demo/: motor_interface.h  visibility_control.h
math/: plucker_vector.cpp  plucker_vector.h  spatial_vector.cpp  spatial_vector.h  type_def.h
math/filter/: kalman_filter.h  lowpass_filter.h
motor_control/: motor_control.cpp  motor_spi.cpp
robot/: robot.cpp
robot/controller/: controller_interface.h
robot/include/: HardwareBridge.h
robot/include/rt/: rt_sbus.h  rt_spi.h
robot/src/: HardwareBridge.cpp  RobotRunner.cpp
robot/src/rt/: rt_rc_interface.cpp  rt_sbus.cpp  rt_spi.cpp
rt/: rt_util.cpp  rt_util.h
scripts/: send_to_mini_cheetah.sh
sim/include/: Graphics3D.h
sim/src/: Graphics3D.cpp  SimControlPanel.cpp  main.cpp
src/: CMakeLists.txt  motor_interface.cpp
src/common/: CMakeLists.txt  Configuration.h  int_types.h  master_types.h
src/common/Planner/: GraphSearch.cpp
src/imu_test/: CMakeLists.txt  main.cpp  rt_vectornav.cpp  rt_vectornav.h  utilities.h  vec_types.h
src/robot/: CMakeLists.txt  HardwareBridge.cpp  HardwareBridge.h  RobotController.h  RobotRunner.cpp  RobotRunner.h  SimulationBridge.cpp
src/robot/rt/: rt_ethercat.cpp  rt_ethercat.h  rt_rc_interface.cpp  rt_rc_interface.h  rt_sbus.cpp  rt_sbus.h  rt_serial.cpp  rt_serial.h  rt_spi.cpp  rt_spi.h  rt_vectornav.cpp  rt_vectornav.h
src/spi-test/: CMakeLists.txt  main.cpp  rt_spi.cpp  rt_spi.h
src/user/: CMakeLists.txt
src/user/Example_Leg_Control/: CMakeLists.txt
src/user/Joint_Controller/: CMakeLists.txt
src/user/MIT_Controller/: CMakeLists.txt
src/user/MiniCheetahSpi_Controller/: CMakeLists.txt
srv/: quadruped_cmd.srv
urdf/custom_cheetah/: custom_cheetah.urdf.xacro
user/: CMakeLists.txt
user/Example_Leg_InvDyn/: CMakeLists.txt
user/JPos_Controller/: CMakeLists.txt
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h
user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_FrontFlip.cpp  FSM_State_FrontJump2.cpp  FSM_State_JointPD.cpp  FSM_State_JointPD.h  FSM_State_Locomotion.cpp  FSM_State_Passive.cpp  FSM_State_RecoverySitDown.cpp  FSM_State_RecoverySitDown.h  FSM_State_RecoveryStand.cpp  FSM_State_RecoveryStand.h
util/: crc.cpp  crc.h  rt_util.cpp  time_mark.cpp  time_mark.h  timer.cpp  timer.h
